# raytracing-exp

./: .gitmodules  3d.cpp  CMakeLists.txt  README.md  main.cxx  mapping.h  primitive.cpp  primitive.h  scene.cpp
ext/: CMakeLists.txt
output/: concentric_mapped.eps  concentric_unmapped.eps  disk.ppm  disk_uniform_sampling.ppm  image.exr  image.ppm  jittered_4.ppm  polar_mapped.eps  polar_unmapped.eps  quad.ppm  quad_analysis.ppm  sphere.ppm  uniform_4.ppm  unmapped.eps
output/integrand_shapes/disk_shadow/: disk_concentric.exr  disk_polar.exr  quad.exr
output/integrand_shapes/quad_shadow/: disk_concentric.exr  disk_polar.exr  quad.exr
output/main_experiment/left_pixel/: polar.exr  polar.ppm  quad.exr  quad.ppm
output/main_experiment/top_pixel/: polar.exr  polar.ppm  quad.exr  quad.ppm
output/mse_output/disk_shadow/: disk_concentric_art.txt  disk_concentric_correlated_multi_jittered.txt  disk_concentric_jittered.txt  disk_concentric_multi_jittered.txt  disk_concentric_regular.txt  disk_concentric_uniform.txt  disk_concentric_uniform_jittered.txt  disk_polar_art.txt  disk_polar_correlated_multi_jittered.txt  disk_polar_jittered.txt  disk_polar_multi_jittered.txt  disk_polar_regular.txt  disk_polar_uniform.txt  disk_polar_uniform_jittered.txt  quad_art.txt  quad_correlated_multi_jittered.txt  quad_jittered.txt  quad_multi_jittered.txt  quad_regular.txt  quad_uniform.txt  quad_uniform_jittered.txt  reference.exr
output/mse_output/quad_shadow/: disk_concentric_art.txt  disk_concentric_correlated_multi_jittered.txt  disk_concentric_jittered.txt  disk_concentric_multi_jittered.txt  disk_concentric_regular.txt  disk_concentric_uniform.txt  disk_concentric_uniform_jittered.txt  disk_polar_art.txt  disk_polar_correlated_multi_jittered.txt  disk_polar_jittered.txt  disk_polar_multi_jittered.txt  disk_polar_regular.txt  disk_polar_uniform.txt  disk_polar_uniform_jittered.txt  quad_art.txt  quad_correlated_multi_jittered.txt  quad_jittered.txt  quad_multi_jittered.txt  quad_regular.txt  quad_uniform.txt  quad_uniform_jittered.txt  reference.exr
output/mse_pixels_output/disk_shadow/: disk_concentric_art.txt  disk_concentric_multi_jittered.txt  disk_concentric_uniform.txt  disk_polar_art.txt  disk_polar_correlated_multi_jittered.txt  disk_polar_uniform.txt  disk_polar_uniform_jittered.txt  quad_multi_jittered.txt  quad_uniform.txt  quad_uniform_jittered.txt
output/mse_pixels_output/quad_shadow/1/: disk_concentric_correlated_multi_jittered.txt  disk_concentric_jittered.txt  disk_concentric_regular.txt  disk_concentric_uniform_jittered.txt  disk_polar_jittered.txt  disk_polar_multi_jittered.txt  disk_polar_regular.txt  quad_art.txt  quad_correlated_multi_jittered.txt  quad_jittered.txt  quad_regular.txt
output/mse_pixels_output/quad_shadow/2/: disk_concentric_art.txt  disk_concentric_correlated_multi_jittered.txt  disk_concentric_jittered.txt  disk_concentric_multi_jittered.txt  disk_concentric_regular.txt  disk_concentric_uniform.txt  disk_concentric_uniform_jittered.txt  disk_polar_art.txt  disk_polar_correlated_multi_jittered.txt  disk_polar_jittered.txt  disk_polar_multi_jittered.txt  disk_polar_regular.txt  disk_polar_uniform.txt  disk_polar_uniform_jittered.txt  quad_art.txt  quad_correlated_multi_jittered.txt  quad_jittered.txt  quad_multi_jittered.txt  quad_regular.txt  quad_uniform.txt  quad_uniform_jittered.txt
output/mse_pixels_output/quad_shadow/3/: disk_concentric_art.txt  disk_concentric_correlated_multi_jittered.txt  disk_concentric_jittered.txt  disk_concentric_multi_jittered.txt  disk_concentric_regular.txt  disk_concentric_uniform.txt  disk_concentric_uniform_jittered.txt  disk_polar_art.txt  disk_polar_correlated_multi_jittered.txt  disk_polar_jittered.txt  disk_polar_multi_jittered.txt  disk_polar_regular.txt  disk_polar_uniform.txt  disk_polar_uniform_jittered.txt  quad_art.txt  quad_correlated_multi_jittered.txt  quad_jittered.txt  quad_multi_jittered.txt  (+3 more)
output/pcf_disk_output/: art.txt  correlated_multi_jittered.txt  jittered.txt  multi_jittered.txt  norm.txt  norm_0.0001.txt  norm_0.01.txt  norm_0.1.txt  norm_0.5.txt  norm_1.0.txt  poisson_disk.txt  regular.txt  uniform.txt  uniform_jittered.txt
output/pcf_output/: jittered_slope.txt  jittered_slope_100.txt  jittered_slope_1024.txt  jittered_slope_121.txt  jittered_slope_144.txt  jittered_slope_169.txt  jittered_slope_196.txt  jittered_slope_225.txt  jittered_slope_256.txt  jittered_slope_289.txt  jittered_slope_324.txt  jittered_slope_361.txt  jittered_slope_400.txt  jittered_slope_441.txt  jittered_slope_484.txt  jittered_slope_529.txt  jittered_slope_576.txt  jittered_slope_625.txt  jittered_slope_676.txt  jittered_slope_729.txt  jittered_slope_784.txt  jittered_slope_841.txt  jittered_slope_900.txt  jittered_slope_961.txt  norm.txt
output/pcf_output/poisson_disk/: norm.txt  poisson_disk_100.txt  poisson_disk_1024.txt  poisson_disk_121.txt  poisson_disk_144.txt  poisson_disk_169.txt  poisson_disk_196.txt  poisson_disk_225.txt  poisson_disk_25.txt  poisson_disk_256.txt  poisson_disk_289.txt  poisson_disk_324.txt  poisson_disk_36.txt  poisson_disk_361.txt  poisson_disk_400.txt  poisson_disk_441.txt  poisson_disk_484.txt  poisson_disk_49.txt  poisson_disk_529.txt  poisson_disk_576.txt  poisson_disk_625.txt  poisson_disk_64.txt  poisson_disk_676.txt  poisson_disk_729.txt  poisson_disk_784.txt  poisson_disk_81.txt  poisson_disk_841.txt  poisson_disk_900.txt  poisson_disk_961.txt
output/pcf_synthesis/: example.eps  example.txt  output.eps  output.txt
src/: 3d.cpp  3d.h  disk_pcf.py  histogram.py  jittered_slope.py  jittered_slope_test.py  jittered_superimposed.py  main.cxx  mapping.cpp  mapping.h  pcf.cpp  pcf.h  plot_pcf_disk.py  plot_pcf_synthesis.py  plot_simple_pcf.py  poisson_superimposed.py  primitive.cpp  primitive.h  sampler.cpp  sampler.h  scene.cpp  scene.h  sphere_pcf.py  util.cpp  util.h  write-exr.h
src/exe/: flat_experiment.cpp  main.cpp  mse_pixels.cpp  multiclass.cpp  pcf_disk.cpp  pcf_experiment.cpp  pcf_slope_experiment.cpp  test_libboard.cpp  variance.cpp  visuals.cpp
(+72 files in other folders)
